--- a/frontend/index.html
+++ b/frontend/index.html
@@ -178,6 +178,6 @@
 
     </svg>
 
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
