Corrigir cores dos ícones de lixeira

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -57,13 +57,17 @@
 
       <symbol id="i_waste" viewBox="0 0 20 20">
         <path
+          fill="currentColor"
           d="M2.22266 17.9357C2.22266 18.4829 2.45674 19.0078 2.87349 19.3948C3.29024 19.7818 3.85549 19.9991 4.44486 19.9991H15.556C16.1454 19.9991 16.7106 19.7818 17.1274 19.3948C17.5441 19.0078 17.7782 18.4829 17.7782 17.9357V5.55469H2.22266V17.9357ZM4.44486 7.77691H15.556V17.7769H4.44486V7.77691Z"
         />
         <path
+          fill="currentColor"
           d="M13.3333 2.22222V0H6.66667V2.22222H0V4.44444H20V2.22222H13.3333Z"
         />
-        <path d="M8.88824 8.89062H6.66602V16.6684H8.88824V8.89062Z" />
-        <path d="M13.3336 8.89062H11.1113V16.6684H13.3336V8.89062Z" />
+        <path
+          fill="currentColor" d="M8.88824 8.89062H6.66602V16.6684H8.88824V8.89062Z" />
+        <path
+          fill="currentColor" d="M13.3336 8.89062H11.1113V16.6684H13.3336V8.89062Z" />
       </symbol>
 
       <symbol id="i_graf" viewBox="0 0 22 16">
