--- a/frontend/index.html
+++ b/frontend/index.html
@@ -186,6 +186,25 @@
         <path d="M2 2H3V1C2.998 0.333 3.33 0 4 0C4.67 0 5.004 0.333 5.004 1V2H11V0.941C11 0.314 11.333 0 12 0C12.667 0 13 0.314 13 0.941V2H14C15.333 2 16 2.667 16 4V18C16 19.333 15.333 20 14 20H2C0.667 20 0 19.333 0 18V4.004C0 2.668 0.667 2 2 2ZM2 18H14V8H2V18ZM2 4V6H14V4H2ZM5 12C4.333 12.001 4 11.668 4 11C4 10.332 4.335 9.999 5.002 10H6C6.667 10 7 10.333 7 11C7 11.667 6.667 12 6 12H5ZM10 12C9.333 12.001 9 11.668 9 11C9 10.332 9.335 9.999 10.002 10H11C11.667 10 12 10.333 12 11C12 11.667 11.667 12 11 12H10ZM5 16C4.333 16.001 4 15.668 4 15C4 14.332 4.335 13.999 5.002 14H6C6.667 14 7 14.333 7 15C7 15.667 6.667 16 6 16H5ZM10 16C9.333 16.001 9 15.668 9 15C9 14.332 9.335 13.999 10.002 14H11C11.667 14 12 14.333 12 15C12 15.667 11.667 16 11 16H10Z" fill="currentColor"/>
       </symbol>
 
+      <symbol id="i_folder" width="20" height="20" viewBox="0 0 24 24">
+        <path
+        fill="none"
+        stroke="currentColor"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        stroke-width="2"
+        d="M20 20a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-7.9a2 2 0 0 1-1.69-.9L9.6 3.9A2 2 0 0 0 7.93 3H4a2 2 0 0 0-2 2v13a2 2 0 0 0 2 2Z"/>
+      </symbol>
+
+      <symbol id="i_folder-open" width="20" height="20" viewBox="0 0 24 24">
+        <path
+        fill="none"
+        stroke="currentColor"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        stroke-width="2"
+        d="m6 14l1.5-2.9A2 2 0 0 1 9.24 10H20a2 2 0 0 1 1.94 2.5l-1.54 6a2 2 0 0 1-1.95 1.5H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h3.9a2 2 0 0 1 1.69.9l.81 1.2a2 2 0 0 0 1.67.9H18a2 2 0 0 1 2 2v2"/>
+      </symbol>
     </svg>
 
     <script type="module" src="/src/main.ts"></script>
