feat: Adicionar página com a lista de ícones

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,6 +21,7 @@
       height="0"
       xmlns="http://www.w3.org/2000/svg"
       style="position: absolute; left: -9999px"
+      id="svg-icons"
     >
       <symbol id="i_+" viewBox="0 0 20 20">
         <path
